force-app/main/default/objects/Sampling_Condition__c/Sampling_Condition__c.object-meta.xml
<CustomObject>
    <label>Sampling Condition</label>
    <nameField>
        <displayFormat>SCN-{YYYY}{MM}{0000}</displayFormat>
        <label>Sampling Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sampling Condition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>