force-app/main/default/objects/Sampling_Condition__c/fields/Actual_Sample_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sample_Qty__c</fullName>
    <description>累计实际出样数量</description>
    <inlineHelpText>Cumulative actual sampling quantity of the product</inlineHelpText>
    <label>Actual Sample Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>