force-app/main/default/objects/Sampling_Condition__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>品牌</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>