force-app/main/default/objects/Sampling_Condition__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>渠道名称</description>
    <inlineHelpText>This field needs to be checked for consistency with channel name in the system</inlineHelpText>
    <label>Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>