force-app/main/default/objects/Sampling_Condition__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>Region__c + &apos;_&apos; + SBU__c + &apos;_&apos; + Channel__c + &apos;_&apos; + TEXT(Product_Line__c) + &apos;_&apos; + Brand__c + &apos;_&apos; + Platform_Model__c + &apos;_&apos; +USD__c + &apos;_&apos; + TEXT(Date__c)</formula>
    <label>Index</label>
    <type>Text</type>
</CustomField>