force-app/main/default/objects/Sampling_Condition__c/fields/Platform_Model__c.field-meta.xml
<CustomField>
    <fullName>Platform_Model__c</fullName>
    <description>平台型号</description>
    <inlineHelpText>Platform model of the sampling product</inlineHelpText>
    <label>Platform Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>