force-app/main/default/objects/Sampling_Condition__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>产品线</description>
    <inlineHelpText>Product line to which the sampling product belongs</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>