force-app/main/default/objects/Sampling_Condition__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>大区（匹配信数区组维表rgn_zh）</description>
    <inlineHelpText>Matching rgn_zh field from HiData</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>