force-app/main/default/objects/Sampling_Condition__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>海外公司名称（匹配信数区组维表sub_zh）</description>
    <inlineHelpText>Overseas Company SBU, need to be checked for consistency with field sub_zh from HiData</inlineHelpText>
    <label>SBU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>