force-app/main/default/objects/Sampling_Condition__c/fields/Total_Sample_Targeted_Qty_in_2024__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Targeted_Qty_in_2024__c</fullName>
    <label>Total Sample Targeted Qty in 2024</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>