force-app/main/default/objects/Sampling_Condition__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <description>价格段Price（USD）(匹配信数)</description>
    <inlineHelpText>Price range(USD), matching HiData</inlineHelpText>
    <label>USD</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>