force-app/main/default/objects/Sampling_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>SBU__c</columns>
    <columns>Channel__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Platform_Model__c</columns>
    <columns>USD__c</columns>
    <columns>Sampling_Status__c</columns>
    <columns>Actual_Sample_Qty__c</columns>
    <columns>Total_Sample_Targeted_Qty_in_2024__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Refrigerator</value>
    </filters>
    <label>All</label>
</ListView>